[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/auto_structured/ui/dialogs/socket_suggestion_dialog.gd" id="1"]

[node name="SocketSuggestionDialog" type="AcceptDialog"]
unique_name_in_owner = true
title = "Socket Suggestions"
size = Vector2i(560, 420)
min_size = Vector2i(520, 360)
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -54.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SummaryLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Review detected socket matches for the newly imported tile."

[node name="SuggestionTree" type="Tree" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
hide_root = true

[node name="HintLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Uncheck any suggestions you don't want to apply. Choose Modify to fine-tune in the wizard."
